# xfwm4

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.ac.in  libtool  meson.build  meson_options.txt
autom4te.cache/: output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
common/: Makefile  Makefile.in  libxfwm-common.la  libxfwm_common_la-xfwm-common.lo  meson.build
common/.deps/: libxfwm_common_la-xfwm-common.Plo
defaults/: Makefile  Makefile.in
helper-dialog/: Makefile  Makefile.in  helper-dialog
helper-dialog/.deps/: helper_dialog-helper-dialog.Po
icons/: Makefile  Makefile.in
icons/22x22/: Makefile  Makefile.in
icons/48x48/: Makefile  Makefile.in
icons/scalable/: Makefile  Makefile.in
po/: .intltool-merge-cache  Makefile  Makefile.in  am.gmo  ar.gmo  ast.gmo  be.gmo  bg.gmo  bn.gmo  ca.gmo  cs.gmo  da.gmo  de.gmo  el.gmo  en_AU.gmo  en_CA.gmo  en_GB.gmo  eo.gmo  es.gmo  et.gmo  eu.gmo  fi.gmo  fr.gmo  gl.gmo  he.gmo  hr.gmo  hu.gmo  id.gmo  is.gmo  it.gmo  ja.gmo  kk.gmo  ko.gmo  lt.gmo  lv.gmo  ms.gmo  nb.gmo  nl.gmo  nn.gmo  oc.gmo  (+23 more)
protocol/: Makefile.am  meson.build  window-switcher-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml  xfway-shell.xml
settings-dialogs/: Makefile  Makefile.in  workspace-resource.c  xfce-wm-settings.desktop  xfce-wmtweaks-settings.desktop  xfce-workspaces-settings.desktop  xfwm4-dialog_ui.h  xfwm4-settings  xfwm4-tweaks-dialog_ui.h  xfwm4-tweaks-settings  xfwm4-workspace-dialog_ui.h  xfwm4-workspace-settings
settings-dialogs/.deps/: xfwm4_settings-range-debouncer.Po  xfwm4_settings-xfwm4-settings.Po  xfwm4_tweaks_settings-range-debouncer.Po  xfwm4_tweaks_settings-tweaks-settings.Po  xfwm4_workspace_settings-workspace-resource.Po  xfwm4_workspace_settings-workspace-settings.Po
src/: Makefile  Makefile.am  Makefile.in  client.c  client.h  compositor-wayland.c  cycle.c  display.c  display.h  event_filter.c  event_filter.h  events.c  focus.c  focus.h  hints.c  keyboard.c  keyboard.h  main-shell-client.c  main-wayland.c  main.c  meson.build  screen.c  screen.h  server.h  session.c  settings.c  shell.c  shell.h  stacking.c  tabwin.c  tabwin.h  transients.c  window-switcher.c  wlr_foreign_toplevel_management_v1.c  wlr_foreign_toplevel_management_v1.h  wlr_layer_shell_v1.c  wlr_layer_shell_v1.h  xfway.h  xfwm4-wayland
src/.deps/: xfwm4-client.Po  xfwm4-compositor.Po  xfwm4-cycle.Po  xfwm4-device.Po  xfwm4-display.Po  xfwm4-event_filter.Po  xfwm4-events.Po  xfwm4-focus.Po  xfwm4-frame.Po  xfwm4-hints.Po  xfwm4-icons.Po  xfwm4-keyboard.Po  xfwm4-main.Po  xfwm4-menu.Po  xfwm4-misc.Po  xfwm4-moveresize.Po  xfwm4-mypixmap.Po  xfwm4-mywindow.Po  xfwm4-netwm.Po  xfwm4-parserc.Po  xfwm4-placement.Po  xfwm4-poswin.Po  xfwm4-screen.Po  xfwm4-session.Po  xfwm4-settings.Po  xfwm4-spinning_cursor.Po  xfwm4-stacking.Po  xfwm4-startup_notification.Po  xfwm4-tabwin.Po  xfwm4-terminate.Po  xfwm4-transients.Po  xfwm4-ui_style.Po  xfwm4-wireframe.Po  xfwm4-workspaces.Po  xfwm4-xsync.Po  xfwm4_wayland-compositor-wayland.Po  xfwm4_wayland-shell.Po
src/wayland/: cursor.c  cursor.h  decoration.c  decoration.h  layer_shell.c  layer_shell.h  main.c  meson.build  output.c  output.h  seat.c  seat.h  server.c  server.h  xdg_shell.c  xdg_shell.h  xwayland.c  xwayland.h
src/wayland/compositor/: hopalong-cursor.c  hopalong-cursor.h  hopalong-decoration.c  hopalong-decoration.h  hopalong-environment.c  hopalong-environment.h  hopalong-keybinding.c  hopalong-keybinding.h  hopalong-layer-shell.c  hopalong-layer-shell.h  hopalong-macros.h  hopalong-main.c  hopalong-output.c  hopalong-output.h  hopalong-pango-util.c  hopalong-pango-util.h  hopalong-seat.c  hopalong-seat.h  hopalong-server.c  hopalong-server.h  hopalong-shell.c  hopalong-shell.h  hopalong-style.c  hopalong-style.h  hopalong-view.c  hopalong-view.h  hopalong-xdg.c  hopalong-xdg.h  hopalong-xwayland.c  hopalong-xwayland.h  meson.build  xfwm-shell.c  xfwm-shell.h
src/wayland/protocols/: meson.build
themes/: Makefile  Makefile.in
themes/daloa/: Makefile  Makefile.in
themes/default/: Makefile  Makefile.in
themes/default-hdpi/: Makefile  Makefile.in
themes/default-xhdpi/: Makefile  Makefile.in
themes/kokodi/: Makefile  Makefile.in
themes/moheli/: Makefile  Makefile.in
util/: signal.c  signal.h
