xfwm4_wayland_shell_sources = [
  'client.c',
  'compositor.c',
  'cycle.c',
  'device.c',
  'display.c',
  'event_filter.c',
  'events.c',
  'focus.c',
  'frame.c',
  'hints.c',
  'icons.c',
  'keyboard.c',
  'main-shell-client.c',
  'menu.c',
  'misc.c',
  'moveresize.c',
  'mypixmap.c',
  'mywindow.c',
  'netwm.c',
  'parserc.c',
  'placement.c',
  'poswin.c',
  'screen.c',
  'session.c',
  'settings.c',
  'spinning_cursor.c',
  'stacking.c',
  'startup_notification.c',
  'tabwin.c',
  'terminate.c',
  'transients.c',
  'ui_style.c',
  'wireframe.c',
  'workspaces.c',
  'xsync.c',  
]

xfwm4_wayland_shell_dependencies = [
  xfwm_client_protos,
  wayland_server,
  wayland_client,
  libinput,
  xkbcommon,
  egl,
  evdev,
  glib,
  gtk,
  compositor,  
  xrender,
  xext,
  xrandr,
  x11,
  libxfce4kbd_private,
  libxfce4ui,
  libxfce4util,
  libxfconf,
  xinerama,
  m_dep,
]

xfwm4_wayland_shell_exe = executable('xfwm4-wayland-shell',
  xfwm4_wayland_shell_sources,
  dependencies: xfwm4_wayland_shell_dependencies,
  include_directories: incdir,
  link_with: xfwm_common,
  install: true
)

subdir('wayland')
