xfwm4_sources = [
  'client.c',
  'compositor.c',
  'cycle.c',
  'device.c',
  'display.c',
  'event_filter.c',
  'events.c',
  'focus.c',
  'frame.c',
  'hints.c',
  'icons.c',
  'keyboard.c', 
  'main.c',
  'menu.c',
  'misc.c',
  'moveresize.c',
  'mypixmap.c',
  'mywindow.c',
  'netwm.c',
  'parserc.c',
  'placement.c',
  'poswin.c',
  'screen.c',
  'session.c',
  'settings.c',
  'spinning_cursor.c',
  'stacking.c',
  'startup_notification.c',
  'tabwin.c',
  'terminate.c',
  'transients.c',
  'ui_style.c',
  'wireframe.c',
  'workspaces.c',
  'xsync.c',  
]

xfwm4_dependencies = [ 
  glib,
  gtk,
  compositor,  
  xrender,
  xext,
  xrandr,
  x11,
  libxfce4kbd_private,
  libxfce4ui,
  libxfce4util,
  libxfconf,
  xinerama,
  m_dep,
]

xfwm4_exe = executable('xfwm4',
  xfwm4_sources,
  dependencies: xfwm4_dependencies,
  include_directories: incdir,
  link_with: xfwm_common,
  install: true
)
